--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
 
               <div class="col-lg-2 col-md-6">
                 <div class="footer-logo-area1">
-                  <h3>About Link</h3>
+                  <h3>Company</h3>
                   <ul>
                     <li><a href="404.html">Our Blog</a></li>
                     <li><a href="404.html">About Us</a></li>
